# dumpty

./: .gitignore  CHANGELOG-dguan2-STAR-7131.adoc  CHANGELOG-dguan2-STAR-7141.adoc  CHANGELOG-dguan2-STAR-7371.adoc  CHANGELOG-dguan2-STAR-7910.adoc  CHANGELOG-dguan2-STAR-8723.adoc  CHANGELOG-dguan2-STAR-8825.adoc  CHANGELOG-dguan2-STAR-9183.adoc  CHANGELOG-slimaye-star-7627.adoc  CHANGELOG.adoc  CHANGELOG_dbalraj_incremental_clarity.adoc  CHANGELOG_sl-star-8317.adoc  README.md  TODO.md  config.yaml.example  config.yaml.oracle.example  pyproject.toml  requirements.txt
src/dumpty/: __init__.py  config.py  exceptions.py  extract.py  extract_db.py  gcp.py  introspector.py  main.py  pipeline.py  serializers.py  spark.py  sql.py  util.py  worker.py
src/dumpty/sql/: vv_Example.sql
